Add handling Json Type