@@ -1,20 +1,20 @@
 package org.nkjmlab.sorm4j.context;
 
-import java.lang.reflect.Array;
 import java.sql.JDBCType;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 import org.nkjmlab.sorm4j.common.SormException;
 import org.nkjmlab.sorm4j.internal.util.ArrayUtils;
-import org.nkjmlab.sorm4j.internal.util.ClassUtils;
 import org.nkjmlab.sorm4j.internal.util.JdbcTypeUtils;
 import org.nkjmlab.sorm4j.internal.util.ParameterizedStringUtils;
-import org.nkjmlab.sorm4j.util.h2.datatype.Json;
+import org.nkjmlab.sorm4j.internal.util.Try;
+import org.nkjmlab.sorm4j.util.json.JsonByte;
 
 /**
  * Default implementation of {@link ColumnValueToJavaObjectConverters}
@@ -27,10 +27,23 @@ public final class DefaultColumnValueToJavaObjectConverters
     implements ColumnValueToJavaObjectConverters {
 
 
-  private final Map<Class<?>, ColumnValueToJavaObjectConverter<?>> converters;
+  private final Map<Class<?>, ColumnValueToJavaObjectConverter> convertersHitCache;
+  private final List<ColumnValueToJavaObjectConverter> converters;
 
-  public DefaultColumnValueToJavaObjectConverters() {
-    this(Collections.emptyMap());
+  private static final DummyConverter DUMMY_CONVERTER = new DummyConverter();
+
+  private static final class DummyConverter implements ColumnValueToJavaObjectConverter {
+
+    @Override
+    public boolean test(ResultSet resultSet, int columnIndex, int columnType, Class<?> toType) {
+      return false;
+    }
+
+    @Override
+    public Object convertTo(ResultSet resultSet, int columnIndex, int columnType, Class<?> toType)
+        throws SQLException {
+      return null;
+    }
   }
 
 
@@ -39,9 +52,10 @@ public final class DefaultColumnValueToJavaObjectConverters
    * @param converters the converter which corresponding to the key class is applied to the column
    *        value.
    */
-  public DefaultColumnValueToJavaObjectConverters(
-      Map<Class<?>, ColumnValueToJavaObjectConverter<?>> converters) {
-    this.converters = Map.copyOf(converters);
+  public DefaultColumnValueToJavaObjectConverters(ColumnValueToJavaObjectConverter... converters) {
+    this.converters = Arrays.asList(converters);
+    this.convertersHitCache =
+        this.converters.isEmpty() ? Collections.emptyMap() : new ConcurrentHashMap<>();
   }
 
   @SuppressWarnings("unchecked")
@@ -61,9 +75,19 @@ public final class DefaultColumnValueToJavaObjectConverters
   private Object convertToHelper(ResultSet resultSet, int columnIndex, int columnType,
       Class<?> toType) throws SQLException {
 
-    final ColumnValueToJavaObjectConverter converter = converters.get(toType);
-    if (converter != null) {
-      return converter.convertTo(resultSet, columnIndex, columnType, toType);
+    if (!converters.isEmpty()) {
+      final ColumnValueToJavaObjectConverter converter =
+          convertersHitCache.computeIfAbsent(toType, key -> converters.stream().filter(conv -> {
+            try {
+              return conv.test(resultSet, columnIndex, columnType, toType);
+            } catch (SQLException e) {
+              throw Try.rethrow(e);
+            }
+          }).findFirst().orElse(DUMMY_CONVERTER));
+
+      if (!converter.equals(DUMMY_CONVERTER)) {
+        return converter.convertTo(resultSet, columnIndex, columnType, toType);
+      }
     }
 
     switch (toType.getName()) {
@@ -143,19 +167,8 @@ public final class DefaultColumnValueToJavaObjectConverters
       case "java.time.OffsetTime":
       case "java.time.OffsetDateTime":
         return resultSet.getObject(columnIndex, toType);
-      case "java.util.ArrayList":
-      case "java.util.List": {
-        java.sql.Array arry = resultSet.getArray(columnIndex);
-        Object srcArry = arry.getArray();
-        final int length = Array.getLength(srcArry);
-        List<Object> ret = new ArrayList<>(length);
-        for (int i = 0; i < length; i++) {
-          ret.add(Array.get(srcArry, i));
-        }
-        return ret;
-      }
-      case "org.nkjmlab.sorm4j.util.h2.datatype.Json":
-        return new Json(resultSet.getBytes(columnIndex));
+      case "org.nkjmlab.sorm4j.util.json.JsonByte":
+        return new JsonByte(resultSet.getBytes(columnIndex));
       default:
         if (toType.isEnum()) {
           try {
@@ -164,28 +177,23 @@ public final class DefaultColumnValueToJavaObjectConverters
             return null;
           }
         } else if (toType.isArray()) {
-          final String compName = toType.getComponentType().getName();
-          switch (compName) {
-            case "byte":
-              return resultSet.getBytes(columnIndex);
-            default: {
-              try {
-                return ArrayUtils.convertToArray(ClassUtils.convertToClass(compName),
-                    resultSet.getArray(columnIndex).getArray());
-              } catch (Exception e) {
-                throw new SormException(ParameterizedStringUtils.newString(
-                    "Could not convert column ({}) to  array ({}[])",
-                    JDBCType.valueOf(columnType).getName(), compName), e);
-              }
-            }
+          if (toType.getComponentType().getName().equals("byte")) {
+            return resultSet.getBytes(columnIndex);
+          }
+          try {
+            return ArrayUtils.convertSqlArrayToArray(toType.getComponentType(),
+                resultSet.getArray(columnIndex));
+          } catch (Exception e) {
+            throw new SormException(
+                ParameterizedStringUtils.newString("Could not convert column ({}) to  array ({}[])",
+                    JDBCType.valueOf(columnType).getName(), toType.getComponentType().getName()),
+                e);
           }
         } else {
           return resultSet.getObject(columnIndex, toType);
-          // throw new SormException(ParameterizedStringUtils.newString(
-          // "Could not find corresponding converter columnType={}, toType={}. ",
-          // JDBCType.valueOf(columnType).getName(), toType));
         }
     }
+
   }
 
 
@@ -203,7 +211,7 @@ public final class DefaultColumnValueToJavaObjectConverters
       java.sql.Time.class, java.sql.Timestamp.class, java.time.Instant.class,
       java.time.LocalDate.class, java.time.LocalTime.class, java.time.LocalDateTime.class,
       java.time.OffsetTime.class, java.time.OffsetDateTime.class, java.util.Date.class,
-      java.util.UUID.class, java.util.List.class);
+      java.util.UUID.class);
 
 
 
